<!--
  ~ Project: mybudget2-mobile-android
  ~ File: strings.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2019 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">My Budget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav menu items -->
    <string name="nav_other_section">Altro</string>

    <string name="open_with">Apri con</string>

    <string name="privacy_policy">Privacy Policy</string>

    <string name="app_version">Versione App</string>

    <string name="action_settings">Settings</string>

    <string name="add">Aggiungi</string>
    <string name="save">Salva</string>
    <string name="delete">Cancella</string>
    <string name="refresh">Aggiorna</string>
    <string name="undo">Annulla</string>
    <string name="no_network">Nessuna connessione</string>

    <string name="name">Nome</string>
    <string name="description">Descrizione</string>

    <string name="network_unavailable_dialog_title">Nessuna connessione disponibile</string>
    <string name="network_unavailable_dialog_message">In questo momento sembra non essere disponibile nessuna
        connessione internet.
        \nPotrai comunque consultare tutte informazioni risalenti all\'ultimo caricamento.
        \n\nQuando non vedrai più questo simbolo significherà che potrai utilizzare l\'applicazione online.
    </string>

    <string name="field_required">Richiesto</string>

    <string name="last_movements">Ultimi movimenti</string>

    <string name="reset_tutorial_complete_message">Il tutorial è di nuovo attivo. Chiudi le preferenze per
        visualizzarlo
    </string>

    <string name="year">Anno</string>
    <string name="month">Mese</string>
    <string name="day">Giorno</string>

    <string name="search">Search</string>
    <string name="reset">Reimposta</string>
    <string name="submit">Invia</string>
    <string name="logout">Logout</string>

    <string name="attention">Attenzione</string>

    <string name="current">Corrente</string>

    <string name="size">Dimensione</string>

    <string name="charts_color_theme">Tema grafici</string>

    <string name="error_firstname_invalid">Il nome deve avere minimo 5 caratteri</string>
    <string name="error_lastname_invalid">Il cognome deve avere minimo 5 caratteri</string>
    <string name="error_username_invalid">L\'username deve avere minimo 5 caratteri</string>
    <string name="error_password_invalid">La password deve avere minimo 8 caratteri e contenere almeno una maiuscola e un numero</string>
    <string name="error_email_invalid">L\'email deve essere valida</string>

    <string name="error_password_required">Password richiesta</string>
    <string name="error_username_required">Username richiesto</string>


    <string name="no_data_for_period">Nessuna dato per il periodo scelto</string>

    <string name="exit_confirmation_message">Confermi di voler uscire dall\'applicazione?</string>

</resources>
