<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: mybudget2-mobile-android
  ~ File: view_search_movements.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2019 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="it.italiancoders.mybudget.databinding.converters.IntStringConversion"/>
        <variable name="model"
                  type="it.italiancoders.mybudget.activity.movements.search.SearchMovementsViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

        <TextView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@drawable/box_round_top_empty"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/movements_search_parameters"/>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:padding="8dp">

            <LinearLayout
                    android:id="@+id/period_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/date_picker_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:scaleType="centerInside"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_calendar_arrow"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/day_TIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/day"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:text="@{IntStringConversion.intToString(model.day)}"
                            android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/month_TIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/month"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:text="@={IntStringConversion.intToString(model.month)}"
                            android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/year_TIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/year"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:text="@={IntStringConversion.intToString(model.year)}"
                            android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/category_spinner"
                    app:layout_constraintBottom_toBottomOf="@+id/category_spinner"/>

            <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:focusable="true"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/period_layout"/>

            <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/ic_search"
                    android:text="@string/search"
                    android:textColor="@android:color/white"
                    android:background="@drawable/box_round_green"
                    android:onClick="search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category_spinner"/>

            <Button
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/ic_backspace"
                    android:text="@string/reset"
                    android:textColor="@android:color/white"
                    android:background="@drawable/box_round_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category_spinner"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>